--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,18 +7,18 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#ECEFF1"
     tools:context="com.example.or.makeitwhite.GameActivity">
 
 <FrameLayout
-    android:layout_marginLeft="2dp"
     android:layout_marginBottom="50dp"
     android:layout_alignParentBottom="true"
     android:layout_alignParentLeft="true"
-    android:layout_width="158dp"
-    android:layout_height="208dp"
+    android:layout_width="160dp"
+    android:layout_height="205dp"
     android:id="@+id/frameLayout">
     <fragment
-        android:layout_width="150dp"
+        android:layout_width="155dp"
         android:layout_height="200dp"
         android:name="com.example.or.makeitwhite.ColorFragment"
         android:id="@+id/fragment"
@@ -29,14 +29,13 @@
 
 
     <FrameLayout
-        android:layout_marginRight="2dp"
         android:layout_marginBottom="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_width="158dp"
-        android:layout_height="208dp">
+        android:layout_width="160dp"
+        android:layout_height="205dp">
     <fragment
-        android:layout_width="150dp"
+        android:layout_width="155dp"
         android:layout_height="200dp"
         android:name="com.example.or.makeitwhite.ColorFragment"
         android:id="@+id/fragment2"
@@ -46,14 +45,13 @@
     </FrameLayout>
 
     <FrameLayout
-        android:layout_marginLeft="2dp"
         android:layout_marginTop="50dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_width="158dp"
-        android:layout_height="208dp">
+        android:layout_width="160dp"
+        android:layout_height="205dp">
     <fragment
-        android:layout_width="150dp"
+        android:layout_width="155dp"
         android:layout_height="200dp"
         android:name="com.example.or.makeitwhite.ColorFragment"
         android:id="@+id/fragment3"
@@ -63,14 +61,13 @@
     </FrameLayout>
 
     <FrameLayout
-        android:layout_marginRight="2dp"
         android:layout_marginTop="50dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_width="158dp"
-        android:layout_height="208dp">
+        android:layout_width="160dp"
+        android:layout_height="205dp">
     <fragment
-        android:layout_width="150dp"
+        android:layout_width="155dp"
         android:layout_height="200dp"
         android:name="com.example.or.makeitwhite.ColorFragment"
         android:id="@+id/fragment4"
@@ -80,18 +77,24 @@
     </FrameLayout>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:onClick="onC"
+        android:layout_width="90dp"
+        android:layout_height="45dp"
+        android:text="Start"
+        android:textAllCaps="false"
+        android:onClick="startGame"
         android:id="@+id/button2"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/background"/>
 
-    <Chronometer
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/chrono"
+        android:id="@+id/timer_text"
+        android:text="00:00"
+        android:textColor="@android:color/primary_text_light"
+        android:textSize="20dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
