--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -27,7 +27,6 @@
          />
 </FrameLayout>
 
-
     <FrameLayout
         android:layout_marginBottom="50dp"
         android:layout_alignParentBottom="true"
@@ -85,8 +84,7 @@
         android:id="@+id/button2"
         android:layout_alignParentBottom="true"
         android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/background"/>
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -97,5 +95,6 @@
         android:textSize="20dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
