--- a/app/src/main/res/layout/game_layout.xml
+++ b/app/src/main/res/layout/game_layout.xml
@@ -1,11 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/colorBackground"
-    android:background="@android:color/black"
-    tools:context="com.example.or.makeitwhite.ColorFragment">
-
+    android:id="@+id/theLayout"
+    tools:context="com.example.or.makeitwhite.BestGameActivityEver">
 
 
 
