--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -3,99 +3,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     android:background="#ECEFF1"
     tools:context="com.example.or.makeitwhite.GameActivity">
 
-<FrameLayout
-    android:layout_marginBottom="50dp"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentLeft="true"
-    android:layout_width="160dp"
-    android:layout_height="205dp"
-    android:id="@+id/frameLayout">
-    <fragment
-        android:layout_width="155dp"
-        android:layout_height="200dp"
-        android:name="com.example.or.makeitwhite.ColorFragment"
-        android:id="@+id/fragment"
-        tools:layout="@layout/fragment_color"
-        android:layout_gravity="center"
-         />
-</FrameLayout>
-
     <FrameLayout
-        android:layout_marginBottom="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_width="160dp"
-        android:layout_height="205dp">
-    <fragment
-        android:layout_width="155dp"
-        android:layout_height="200dp"
-        android:name="com.example.or.makeitwhite.ColorFragment"
-        android:id="@+id/fragment2"
-        tools:layout="@layout/fragment_color"
-        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gameLayout"
         />
-    </FrameLayout>
 
-    <FrameLayout
-        android:layout_marginTop="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_width="160dp"
-        android:layout_height="205dp">
-    <fragment
-        android:layout_width="155dp"
-        android:layout_height="200dp"
-        android:name="com.example.or.makeitwhite.ColorFragment"
-        android:id="@+id/fragment3"
-        tools:layout="@layout/fragment_color"
-        android:layout_gravity="center"
-         />
-    </FrameLayout>
 
-    <FrameLayout
-        android:layout_marginTop="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_width="160dp"
-        android:layout_height="205dp">
-    <fragment
-        android:layout_width="155dp"
-        android:layout_height="200dp"
-        android:name="com.example.or.makeitwhite.ColorFragment"
-        android:id="@+id/fragment4"
-        tools:layout="@layout/fragment_color"
-        android:layout_gravity="center"
-         />
-    </FrameLayout>
-
-    <Button
-        android:layout_width="90dp"
-        android:layout_height="45dp"
-        android:text="Start"
-        android:textAllCaps="false"
-        android:onClick="startGame"
-        android:id="@+id/button2"
-        android:layout_alignParentBottom="true"
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/timer_text"
-        android:text="00:00"
+        android:text="15.00"
         android:textColor="@android:color/primary_text_light"
         android:textSize="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/score_text"
+        android:text="0"
+        android:textColor="@android:color/primary_text_light"
+        android:textSize="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start"
+        android:onClick="startGame"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
