--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -23,12 +23,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
-        android:text="Your time: "
+        android:text="Your score: "
         android:textColor="@android:color/secondary_text_light"
         android:id="@+id/time_text"
         android:layout_marginTop="150dp"
         android:layout_gravity="center_horizontal"
         />
+
 
 
 
