--- a/app/src/main/res/drawable/item_drawable.xml
+++ b/app/src/main/res/drawable/item_drawable.xml
@@ -2,8 +2,8 @@
 
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-            <stroke
-                android:color="#A7FFEB"
-                android:width="1dp" />
-    <corners android:radius="25dp"/>
+            <solid
+                android:color="@android:color/black"
+                />
+    <corners android:radius="10dp"/>
         </shape>
