--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -34,6 +34,7 @@
         android:text="0"
         android:textColor="@android:color/primary_text_light"
         android:textSize="20dp"
+        android:textStyle="bold"
         android:layout_marginTop="15dp"
         android:layout_marginRight="15dp"
         android:layout_alignParentTop="true"
