--- a/app/src/main/res/layout/fragment_color.xml
+++ b/app/src/main/res/layout/fragment_color.xml
@@ -6,7 +6,13 @@
     android:background="@drawable/item_drawable"
     tools:context="com.example.or.makeitwhite.ColorFragment">
 
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="10"
+    android:layout_centerHorizontal="true"
+    android:layout_centerVertical="true"
+    />
 
 
 </RelativeLayout>
