--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -14,19 +14,6 @@
         />
 
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/timer_text"
-        android:text="15.00"
-        android:textColor="@android:color/primary_text_light"
-        android:textSize="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,14 +27,32 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <TextView
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:text="Start"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
         android:onClick="startGame"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:background="@drawable/start_button_drawable"
+        android:layout_marginBottom="5dp"
+        android:elevation="32dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/timer_text"
+        android:text="15.00"
+        android:textColor="@android:color/primary_text_light"
+        android:textSize="20dp"
+        android:layout_marginLeft="15dp"
+        android:textStyle="italic"
+        android:layout_alignBaseline="@+id/score_text"
+        />
 
 
 </RelativeLayout>
