--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,12 +29,26 @@
     <Button
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_centerInParent="true"
         android:text="Play"
         android:textSize="25sp"
         android:textAllCaps="false"
         android:id="@+id/button"
-        android:onClick="onClick" />
+        android:onClick="onClick"
+        android:layout_marginBottom="54dp"
+        android:layout_above="@+id/adView"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Make\nIt\nWhite"
+        android:gravity="center"
+        android:id="@+id/make_it_white"
+        android:textColor="@android:color/black"
+        android:textSize="60sp"
+        android:layout_below="@+id/adView1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="78dp" />
 
 
 </RelativeLayout>
