--- a/app/src/main/res/layout/game_over_layout.xml
+++ b/app/src/main/res/layout/game_over_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ECEFF1"
+    android:background="#b5ecea"
     tools:context="com.example.or.makeitwhite.GameOverActivity">
 
     <TextView
