--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,17 +17,23 @@
         ads:adUnitId="@string/banner_ad_unit_id"
         android:layout_marginBottom="8dp"/>
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="100dp"
+    <TextView
+        android:layout_width="180dp"
+        android:layout_height="90dp"
         android:text="Play"
-        android:textSize="25sp"
+        android:textSize="30sp"
         android:textAllCaps="false"
         android:id="@+id/button"
         android:onClick="onClick"
-        android:layout_marginBottom="54dp"
+        android:gravity="center"
+        android:textColor="@drawable/play_button_text"
+        android:layout_marginBottom="70dp"
         android:layout_above="@+id/adView"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold"
+        android:background="@drawable/play_button_drawable"
+        android:translationZ="16dp"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,7 +41,7 @@
         android:text="Make\nIt\nWhite"
         android:gravity="center"
         android:id="@+id/make_it_white"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/primary_text_light"
         android:textSize="60sp"
         android:layout_marginTop="50dp"
         android:layout_alignParentTop="true"
