--- a/app/src/main/res/layout/game_over_layout.xml
+++ b/app/src/main/res/layout/game_over_layout.xml
@@ -27,7 +27,7 @@
         android:text="Your score: "
         android:textColor="@android:color/secondary_text_light"
         android:id="@+id/score_text"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="50dp"
         android:layout_gravity="center_horizontal"
         />
 
@@ -38,16 +38,24 @@
         android:text="Best score: "
         android:textColor="@android:color/secondary_text_light"
         android:id="@+id/best_score_text"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:layout_gravity="center_horizontal"
         />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <TextView
+        android:layout_width="180dp"
+        android:layout_height="90dp"
         android:text="Play Again"
+        android:textSize="30sp"
         android:textAllCaps="false"
-        android:layout_marginTop="30dp"
+        android:id="@+id/button"
+        android:gravity="center"
+        android:textColor="@drawable/play_button_text"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="150dp"
+        android:textStyle="bold"
+        android:background="@drawable/play_button_drawable"
+        android:translationZ="16dp"
         android:onClick="playAgain"/>
+
 </LinearLayout>
