--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,18 +34,105 @@
         android:background="@drawable/play_button_drawable"
         android:translationZ="16dp"
         />
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
 
+    >
+
+
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/item_drawable"
+        android:tint="#B71C1C"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="-10dp"
+        android:layout_marginLeft="-40dp"/>
+    <ImageView
+        android:layout_width="160dp"
+        android:layout_height="75dp"
+        android:src="@drawable/item_drawable"
+        android:tint="#2196F3"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="80dp"
+        android:layout_marginLeft="40dp"
+         />
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/item_drawable"
+        android:tint="#B71C1C"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="140dp"
+        android:layout_marginRight="-40dp"/>
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:tint="#0D47A1"
+        android:src="@drawable/item_drawable"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="-20dp"
+        android:layout_marginRight="80dp"
+        />
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="100dp"
+        android:tint="#0D47A1"
+        android:src="@drawable/item_drawable"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="220dp"
+        android:layout_marginLeft="100dp"
+        />
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="75dp"
+        android:src="@drawable/item_drawable"
+        android:tint="#F57F17"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="90dp"
+        android:layout_marginRight="20dp"
+         />
+    <ImageView
+        android:layout_width="180dp"
+        android:layout_height="100dp"
+        android:tint="#4CAF50"
+        android:src="@drawable/item_drawable"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="140dp"
+        android:layout_marginLeft="90dp"
+        />
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="120dp"
+        android:tint="#F57F17"
+        android:src="@drawable/item_drawable"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="170dp"
+        android:layout_marginLeft="-30dp"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Make\nIt\nWhite"
+        android:text="Make It\nWhite"
         android:gravity="center"
         android:id="@+id/make_it_white"
         android:textColor="@android:color/primary_text_light"
         android:textSize="60sp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="90dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
 
 
 </RelativeLayout>
