--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="#ECEFF1"
     tools:context="com.example.or.makeitwhite.GameActivity">
 
@@ -13,14 +12,13 @@
         android:id="@+id/gameLayout"
         />
 
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/score_text"
         android:text="0"
         android:textColor="@android:color/primary_text_light"
-        android:textSize="20dp"
+        android:textSize="30dp"
         android:textStyle="bold"
         android:layout_marginTop="15dp"
         android:layout_marginRight="15dp"
@@ -28,31 +26,38 @@
         android:layout_alignParentRight="true" />
 
     <TextView
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:text="Start"
-        android:textAllCaps="false"
-        android:textColor="@android:color/white"
-        android:onClick="startGame"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:background="@drawable/start_button_drawable"
-        android:layout_marginBottom="5dp"
-        android:elevation="32dp"
-        />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/timer_text"
         android:text="15.00"
         android:textColor="@android:color/primary_text_light"
-        android:textSize="20dp"
+        android:textSize="30dp"
         android:layout_marginLeft="15dp"
         android:textStyle="italic"
         android:layout_alignBaseline="@+id/score_text"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:textColor="@android:color/primary_text_light"
+        android:textSize="150dp"
+        android:textStyle="bold"
+        android:text="3"
+        android:id="@+id/count_down_text"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/add_time_text"
+        android:text="+1.8"
+        android:textColor="@android:color/primary_text_light"
+        android:textSize="20dp"
+        android:layout_below="@id/timer_text"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="32dp"
+        android:visibility="invisible"/>
 
 </RelativeLayout>
