--- a/app/src/main/res/anim/float_anim.xml
+++ b/app/src/main/res/anim/float_anim.xml
@@ -2,8 +2,9 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <translate
-        android:fromYDelta="100"
+        android:fromYDelta="50"
         android:toYDelta="0"
+        android:interpolator ="@android:anim/accelerate_interpolator"
         />
 
     <alpha
