--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_centerHorizontal="true"
         android:textStyle="bold"
         android:background="@drawable/play_button_drawable"
-        android:translationZ="16dp"
+        android:elevation="16dp"
         />
 
 <RelativeLayout
