--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -135,4 +135,16 @@
 </RelativeLayout>
 
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:text="Best score: "
+        android:textColor="@android:color/secondary_text_light"
+        android:id="@+id/best_score_text"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp"
+        android:layout_above="@+id/adView"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
