--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,8 @@
         android:onClick="onClick"
         android:gravity="center"
         android:textColor="@drawable/play_button_text"
-        android:layout_marginBottom="70dp"
-        android:layout_above="@+id/adView"
+        android:layout_marginBottom="4dp"
+        android:layout_above="@+id/best_score_text"
         android:layout_centerHorizontal="true"
         android:textStyle="bold"
         android:background="@drawable/play_button_drawable"
@@ -45,7 +45,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:src="@drawable/item_drawable"
-        android:tint="#B71C1C"
+        android:tint="#ff0000"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="-10dp"
@@ -54,7 +54,7 @@
         android:layout_width="160dp"
         android:layout_height="75dp"
         android:src="@drawable/item_drawable"
-        android:tint="#2196F3"
+        android:tint="#00E5FF"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="80dp"
@@ -64,7 +64,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/item_drawable"
-        android:tint="#B71C1C"
+        android:tint="#ff0000"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_marginTop="140dp"
@@ -73,7 +73,7 @@
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:tint="#0D47A1"
+        android:tint="#76FF03"
         android:src="@drawable/item_drawable"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
@@ -83,7 +83,7 @@
     <ImageView
         android:layout_width="120dp"
         android:layout_height="100dp"
-        android:tint="#0D47A1"
+        android:tint="#00E5FF"
         android:src="@drawable/item_drawable"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -94,7 +94,7 @@
         android:layout_width="100dp"
         android:layout_height="75dp"
         android:src="@drawable/item_drawable"
-        android:tint="#F57F17"
+        android:tint="#E040FB"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_marginTop="90dp"
@@ -103,7 +103,7 @@
     <ImageView
         android:layout_width="180dp"
         android:layout_height="100dp"
-        android:tint="#4CAF50"
+        android:tint="#76FF03"
         android:src="@drawable/item_drawable"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -113,7 +113,7 @@
     <ImageView
         android:layout_width="80dp"
         android:layout_height="120dp"
-        android:tint="#F57F17"
+        android:tint="#E040FB"
         android:src="@drawable/item_drawable"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -138,10 +138,21 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:text="Best score: "
         android:textColor="@android:color/secondary_text_light"
         android:id="@+id/best_score_text"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"
+        android:layout_above="@+id/text"
+        android:layout_centerHorizontal="true" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:text="You have tapped "
+        android:textColor="@android:color/secondary_text_light"
+        android:id="@+id/text"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="16dp"
         android:layout_above="@+id/adView"
