--- a/app/src/main/res/layout/game_over_layout.xml
+++ b/app/src/main/res/layout/game_over_layout.xml
@@ -41,6 +41,16 @@
         android:layout_marginTop="50dp"
         android:layout_gravity="center_horizontal"
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:text="You have tapped"
+        android:textColor="@android:color/secondary_text_light"
+        android:id="@+id/all_taps"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center_horizontal"
+        />
 
     <TextView
         android:layout_width="180dp"
