--- a/app/src/main/res/drawable/item_drawable.xml
+++ b/app/src/main/res/drawable/item_drawable.xml
@@ -2,9 +2,9 @@
 
 <shape android:shape="oval"
     xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid
-                android:color="#673AB7"
-                />
+    <solid
+        android:color="#FAFAFA"
+        />
 
 
-        </shape>
+</shape>
