--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -28,33 +28,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/score_text"
-        android:text="0"
-        android:textColor="@android:color/primary_text_light"
-        android:textSize="30dp"
-        android:elevation="700dp"
-        android:textStyle="bold"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/timer_text"
-        android:text="15.00"
-        android:textColor="@android:color/primary_text_light"
-        android:textSize="30dp"
-        android:layout_marginLeft="15dp"
-        android:textStyle="italic"
-        android:elevation="70dp"
-        android:layout_alignBaseline="@+id/score_text"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textColor="@android:color/primary_text_light"
         android:textSize="150dp"
@@ -70,12 +43,35 @@
         android:id="@+id/add_time_text"
         android:text="+1.8"
         android:textColor="@android:color/primary_text_light"
-        android:textSize="16dp"
-        android:layout_below="@id/timer_text"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="32dp"
+        android:textSize="20dp"
         android:textStyle="bold"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:elevation="55dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/score_text"
+        android:text="0"
+        android:textColor="@android:color/primary_text_light"
+        android:textSize="30dp"
+        android:elevation="700dp"
+        android:textStyle="bold"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="35dp"
+        android:layout_marginTop="35dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/timer_text"
+        android:text="15.00"
+        android:textColor="@android:color/primary_text_light"
+        android:textSize="25dp"
+        android:elevation="50dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginStart="35dp"
+        android:textStyle="bold|italic"/>
 
 
 </RelativeLayout>
