--- a/app/src/main/res/layout/game_over_layout.xml
+++ b/app/src/main/res/layout/game_over_layout.xml
@@ -62,11 +62,11 @@
         android:gravity="center"
         android:textColor="@drawable/play_button_text"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="150dp"
         android:textStyle="bold"
         android:background="@drawable/play_button_drawable"
         android:translationZ="16dp"
         android:padding="8dp"
-        android:onClick="playAgain"/>
+        android:onClick="playAgain"
+        android:layout_marginTop="50dp"/>
 
 </LinearLayout>
