--- a/app/src/main/res/layout/game_over_layout.xml
+++ b/app/src/main/res/layout/game_over_layout.xml
@@ -43,6 +43,7 @@
         android:textColor="#0D47A1"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
+        android:textStyle="bold"
         />
 
     <TextView
