--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#b5ecea"
-    tools:context="com.example.or.makeitwhite.MainActivity">
+    tools:context="com.app.or.makeitwhite.MainActivity">
 
     
     <com.google.android.gms.ads.AdView
