--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back_background"
-    tools:context="com.example.or.makeitwhite.GameActivity">
+    tools:context="com.app.or.makeitwhite.GameActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
