--- a/app/src/main/res/layout/game_over_layout.xml
+++ b/app/src/main/res/layout/game_over_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:background="#b5ecea"
-    tools:context="com.example.or.makeitwhite.GameOverActivity">
+    tools:context="com.app.or.makeitwhite.GameOverActivity">
     <ImageView
         android:layout_width="120dp"
         android:layout_height="120dp"
